# mip

./: .gitignore  COMO-CRIAR-APLICACAO.md  COOKBOOK.md  Manual-Metodologico-Insumo-Produto.md  README.md  environment.yml  requirements.txt
.claude/skills/estimar-mip/: SKILL.md
.github/workflows/: testes.yml
MIP/: AMBIENTE.md  README.md  executar.py  gerar_matriz_gras.py  gerar_matrizes_estimadas.py  pyproject.toml  validar_ras.py
MIP/dados/brutos/: Matriz_de_Insumo_Produto_2010_Nivel_67.xls
MIP/dados/brutos/tru_ano_anterior/: 68_tab3_2019.xls  68_tab3_2020.xls  68_tab3_2021.xls  68_tab4_2019.xls  68_tab4_2020.xls  68_tab4_2021.xls
MIP/dados/brutos/tru_anos/: 68_tab1_2020.xls  68_tab1_2021.xls  68_tab2_2020.xls  68_tab2_2021.xls
MIP/dados/brutos/tru_n12/: 12_tab1_2020.xls  12_tab1_2021.xls  12_tab1_2022.xls  12_tab2_2020.xls  12_tab2_2021.xls  12_tab2_2022.xls  12_tab3_2022.xls  12_tab4_2022.xls
MIP/mipcore/: __init__.py  cadeia.py  cnt.py  gras.py  leontief.py  multiplicadores.py  precos_basicos.py  regional.py  sda.py  tru.py
MIP/saidas/: bevap_decomposicao.csv  bevap_resumo.txt
MIP/tests/: conftest.py  test_cadeia.py  test_cnt.py  test_golden_multiplicadores.py  test_golden_tipo2.py  test_mipcore.py  test_sda.py
MIP/tests/golden/: multiplicadores_tipo1_2015.npz  multiplicadores_tipo1_2015.sha256.json  multiplicadores_tipo1_2019.npz  multiplicadores_tipo1_2019.sha256.json  multiplicadores_tipo2_2019.npz  multiplicadores_tipo2_2019.sha256.json
