[project]
name = "mipcore"
dynamic = ["version"]
description = "Toolkit de Matriz Insumo-Produto (IBGE) reutilizável"
# >=3.11: as versões travadas de numpy (2.5) e pandas (3.0) não têm wheel para 3.9/3.10.
requires-python = ">=3.11"
# Faixas abstratas para desenvolvimento; para reprodução exata usar requirements.lock
# (versões fixadas e verificadas contra a suíte em 2026-07-06).
dependencies = ["numpy>=2.0", "pandas>=2.2", "scipy>=1.12", "xlrd>=2.0", "openpyxl>=3.1"]

[tool.setuptools.packages.find]
include = ["mipcore*"]

# versão vem de mipcore.__version__ (fonte única; ver MIP/mipcore/__init__.py)
[tool.setuptools.dynamic]
version = {attr = "mipcore.__version__"}
